src/test/deca/codegen/valid/debordement/testDebordement.deca
// Description:
//    tests division flottante sur 0; débordement lors d'opération arithmétique sur flottants.
//
// Resultats:
//    Error: Débordement arithmétique sur flottants
// 
// Historique:
//    cree le 01/01/2021

{
    int x = 1;
    int y = 2;
    println((x+3)*(((((((((((2+x)*(y+5))+(y*x))*(y+3))+(y*x)*(y*(x+y) +(y*y))*(y*y)+ x) + y)*x))))));
}

