src/test/deca/codegen/invalid/testDeborFloat3.deca
// Description:
//    débordement lors d'opération arithmétique sur flottants.
//
// Resultats:
//
//  Error: Débordement arithmétique sur flottants
//
// Historique:
//    cree le 20/01/2021

{
    float x = 1000.0;
    while (true) {
        x = x + x;
    }
}
